# relate-smtp

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  package-lock.json  package.json
.github/: CODEOWNERS  FUNDING.yml
.github/workflows/: ci.yml  codeql.yml  desktop-build.yml  docker-publish.yml  docs-publish.yml  mobile-build.yml  scorecard.yml
api/: .editorconfig  Directory.Build.props  Dockerfile  Relate.Smtp.slnx
api/tests/: .editorconfig
desktop/: README.md  eslint.config.js  index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
desktop/src/: App.tsx  index.css  main.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src-tauri/src/commands/: api.rs  auth.rs  mod.rs  oidc.rs  settings.rs  tray.rs
docker/: .env.example  docker-compose.dev.yml  docker-compose.ghcr.yml  docker-compose.yml
docs/: index.md  package.json
docs/.vitepress/: config.ts
docs/api-reference/: config.md  discovery.md  emails.md  filters.md  index.md  labels.md  notifications.md  outbound.md  preferences.md  profile.md  push-subscriptions.md  signalr.md  smtp-credentials.md
docs/architecture/: index.md  (+2 more)
mobile/: .detoxrc.js  .gitignore  README.md  app.json  eas.json  eslint.config.js  global.css  jest.config.js  jest.setup.js  package-lock.json  package.json  tailwind.config.js  tweetnacl-util.d.ts
scripts/: smtp_test_tool.py
web/: .env.example  eslint.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
(+407 files in other folders)
