[package]
name = "relate-mail-desktop"
version = "0.1.0"
description = "Relate Mail Desktop Client"
authors = [""]
edition = "2021"

[lib]
name = "relate_mail_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
keyring = { version = "3", features = ["windows-native", "apple-native", "linux-native"] }
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"
open = "5"
urlencoding = "2"

[lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"

[lints.clippy]
# Security
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"

# Correctness
correctness = { level = "deny", priority = -1 }

# Suspicious code
suspicious = { level = "warn", priority = -1 }

# Code complexity
complexity = { level = "warn", priority = -1 }

# Performance
perf = { level = "warn", priority = -1 }

# Style
style = { level = "warn", priority = -1 }
needless_pass_by_value = "warn"
redundant_closure_for_method_calls = "warn"
cloned_instead_of_copied = "warn"
flat_map_option = "warn"
manual_ok_or = "warn"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
